# mu_feature_ffa

./: Cargo.toml  LICENSE  Readme.rst  RepoDetails.md  pip-requirements.txt  rust-toolchain.toml
.azurepipelines/: Ubuntu-GCC5.yml  Windows-VS.yml
.github/workflows/: label-issues.yml  release-secure-partitions.yml
.github/workflows/label-issues/: file-paths.yml
.pytool/: CISettings.py
FfaFeaturePkg/: FfaFeaturePkg.ci.yaml  FfaFeaturePkg.dec  FfaFeaturePkg.dsc
FfaFeaturePkg/Applications/FfaPartitionTest/: FfaPartitionTestApp.c  FfaPartitionTestApp.inf
FfaFeaturePkg/Docs/: Ffa_Feature.md  PartitionGuide.md  TpmService.md
FfaFeaturePkg/Include/Guid/: NotificationServiceFfa.h  TestServiceFfa.h
FfaFeaturePkg/SecurePartitions/MsSecurePartition/: MsSecurePartition.c  MsSecurePartition.inf  PartitionGuide.md
FfaFeaturePkg/SecurePartitions/MsSecurePartitionRust/: Cargo.toml  MsSecurePartitionRust.inf  README.md  build.rs
FfaFeaturePkg/SecurePartitions/MsSecurePartitionRust/.cargo/: config.toml
FfaFeaturePkg/SecurePartitions/MsSecurePartitionRust/linker/: image.ld  qemu.ld
FfaFeaturePkg/SecurePartitions/MsSecurePartitionRust/src/: main.rs
FfaFeaturePkg/SecurePartitions/MsSecurePartitionRust/src/baremetal/: interrupt.rs  mod.rs  panic.rs
