[workspace]
resolver = "2"

# Add packages that generate binaries here
members = [
  "FfaFeaturePkg/Library/TestServiceLibRust",
  "FfaFeaturePkg/SecurePartitions/MsSecurePartitionRust"
]

# Add packages that generate libraries here
[workspace.dependencies]

memoffset = "0.9.0"
num-traits = { version = "0.2", default-features = false}
num-derive = { version = "0.4", default-features = false}
r-efi = "4.3.0"
rustversion = "1.0.14"
spin = "0.9.8"
scroll = { version = "0.12", default-features = false, features = ["derive"]}

aarch64-cpu = "10.0.0"
aarch64-paging = { version = "0.8.1", default-features = false }
aarch64-rt = { version = "0.1.0", default-features = false, features = [
    "el1",
    "exceptions",
] }
bit-register = { git = "https://github.com/OpenDevicePartnership/odp-utilities", rev = "2f79d238" }
critical-section = { version = "1.1.0", default-features = false }
debug-non-default = { git = "https://github.com/OpenDevicePartnership/odp-utilities", rev = "2f79d238" }
ec-service-lib = { git = "https://github.com/OpenDevicePartnership/haf-ec-service" }
embassy-aarch64-haf = { git = "https://github.com/OpenDevicePartnership/haf-ec-service" }
embassy-executor = { git = "https://github.com/embassy-rs/embassy" }
embassy-futures = { git = "https://github.com/embassy-rs/embassy" }
embassy-hal-internal = { git = "https://github.com/embassy-rs/embassy" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy" }
embassy-time = { git = "https://github.com/embassy-rs/embassy" }
embassy-time-driver = { git = "https://github.com/embassy-rs/embassy" }
embassy-time-queue-utils = { git = "https://github.com/embassy-rs/embassy" }
embedded-hal = { git = "https://github.com/rust-embedded/embedded-hal" }
odp-ffa = { git = "https://github.com/OpenDevicePartnership/haf-ec-service" }
hafnium = { git = "https://github.com/OpenDevicePartnership/haf-ec-service" }
test-service-lib = { path = "FfaFeaturePkg/Library/TestServiceLibRust" }
heapless = "0.8.0"
log = { version = "0.4", default-features = false }
mockall = "0.13.1"
num_enum = { version = "0.7.3", default-features = false }
subenum = { version = "1.1.2", default-features = false }
uuid = { version = "1.0", default-features = false, features = ["v1"] }
rstest = "0.25.0"
