[workspace]
resolver = "2"

# Add packages that generate binaries here
members = [
  "FfaFeaturePkg/Library/TestServiceLibRust",
  "FfaFeaturePkg/SecurePartitions/MsSecurePartitionRust"
]

# Add packages that generate libraries here
[workspace.dependencies]
aarch64-cpu = "11.0.0"
aarch64-rt = { version = "0.3.1", default-features = false, features = [
    "el1",
    "exceptions",
] }
embassy-executor = { version = "0.9.1" }
embassy-aarch64-haf = { git = "https://github.com/OpenDevicePartnership/haf-ec-service", rev = "76683a18" }
ec-service-lib = { git = "https://github.com/OpenDevicePartnership/haf-ec-service", rev = "76683a18" }
odp-ffa = { git = "https://github.com/OpenDevicePartnership/haf-ec-service", rev = "76683a18" }
hafnium = { git = "https://github.com/OpenDevicePartnership/haf-ec-service", rev = "76683a18" }
log = { version = "0.4", default-features = false }
uuid = { version = "1.0", default-features = false, features = ["v1"] }
test-service-lib = { path = "FfaFeaturePkg/Library/TestServiceLibRust" }
